# stac-mjx

./: .gitignore  Mat-to-Nwb-Synth-Data.ipynb  Mat-to-Nwb.ipynb  README.md  benchmark.py  benchmark_parallel.py  bind_test.ipynb  charles_test.ipynb  charles_test.py  codecov.yml  convert_mat.ipynb  demo_fit_offsets.h5  environment.yaml  environment.yml  fit_sq_1_quick.p  graph_error.ipynb  install_graphics.sh  mouse_arm_fit.h5  mouse_arm_fit_aligned.h5  mouse_arm_ik_only.h5  mouse_arm_ik_only_aligned.h5  mouse_arm_ik_only_torquearm.h5  mujoco_mjx_tutorial_modified.ipynb  new.py  offsets.ipynb  out_3600_limgs.txt  output.txt  overlay.ipynb  pilot_plot_3d_mouse_reach.00.ipynb  pilot_procrustes_align_josh_eric.00.ipynb  pilot_run_stac_mouse_arm.00.ipynb  pilot_stac_mouse_arm.00.ipynb  plot_video_maker.ipynb  process_snips.py  procrustes_align_josh.ipynb  pyproject.toml  render.ipynb  requirements.txt  run_mouse.py  run_rodent.py  (+19 more)
.github/workflows/: ci.yml
conf/: common.yaml  rodent.yaml  stac.yaml
configs/: celegans_demo.yaml  config.yaml  config_fly.yaml  config_fly_treadmill.yaml  config_synth_data.yaml  mouse.yaml  mouse_15.yaml  rodent.yaml  stac.yaml  stac_mouse.yaml
configs/anatomy/: v1.yaml  v2.yaml  v2_muscles.yaml
configs/dataset/: BDN2_headless.yaml  courtship.yaml  free_walking.yaml  stationary.yaml
configs/model/: arm_model_v3_torque.xml  celegans.yaml  correspondences.yaml  fly_free.yaml  fly_free_courtship.yaml  fly_tethered.yaml  fly_tethered_v2.1.yaml  fly_treadmill.yaml  mazen_arm.yaml  mouse.yaml  mouse_arm.yaml  rodent.yaml  sungaya_inexpectata.yaml  synth.yaml  synth_data.yaml  synth_model.yaml
configs/paths/: desktop.yaml  hyak.yaml  mbook.yaml  workstation.yaml
configs/stac/: demo.yaml  stac.yaml  stac_celegans.yaml  stac_fly_courtship.yaml  stac_fly_free.yaml  stac_fly_tethered.yaml  stac_fly_treadmill.yaml  stac_mouse.yaml  stac_mouse_arm.yaml  stac_sungaya_inexpectata.yaml  stac_synth_data.yaml  stick.yaml
core/: compute_stac.py  controller.py  main.py  operations.py  stac_base.py  utils.py  viz.py
demos/: 01_Procrustes_Alignment.ipynb  03_Trajectory_Integration.ipynb  Run_Stac_Hydra.py  Test.py  Test_hydra.py  api_usage.ipynb  create_synth_data.ipynb  demo_stac.yaml  demo_viz.p  estimate_mocap_plane.ipynb  look_at_pickle.ipynb  out.txt  rodent_demo.ipynb  run_stac_fly_model.py  run_stac_hydra.py  stac-mjx.code-workspace  stac_celegans.ipynb  view_nwb.ipynb  viz_usage.ipynb  viz_usage_fly_model.ipynb
docs/: api_usage.ipynb  use_api.ipynb  view_nwb.ipynb  viz_usage.ipynb
meshes/stl/: Bone_Clavicle_right.stl  Bone_Clavicle_right_v3.stl  Bone_Humerus_right.stl  Bone_Humerus_right_v3.stl  Bone_Scapula_right_v3.stl  Bone_Segmentation_Humerus.stl  Bone_Segments_Hand.stl  Bone_Segments_Radius.stl  Bone_Segments_Ulna.stl  Bone_Segments_Ulna_v2.stl  Bone_Ulna_right_v3.stl  Bones_Scapula.stl  Bones_Scapula_right.stl  Camera.stl  ulnar_right.blend  ulnar_right.blend1
models/: akira_torque.xml  arm_model_v3.xml  arm_model_v3_torque.xml  arm_model_v3_torque_old.xml  humanoid.xml  mazen_torque.xml  mouse-frozen.xml  mouse-posed.xml  mouse-reach-joints.yaml  mouse-reach-muscle-ctrllimited.xml  mouse-reach-muscle.xml  mouse-reach.xml  mouse.xml  mouse_with_joint_limits_nocoll.xml  mouse_with_meshes.xml  mouse_with_meshes_short.xml  rodent.xml  rodent_modified.xml  rodent_modified_save.xml  rodent_overlay.xml  rodent_pair.xml  rodent_simplified.xml  rodent_stac.xml  rodent_stac_optimized.xml  rodent_viz.xml  synth_model.xml
models/GeomJan01242023/: Bone_Clavicle.stl  Bone_Radius_right_v3.stl  Bone_Segments_Radius_right.stl  radius_right.blend
models/celegans/: celegans.xml  celegans_muscle_range.xml  celegans_v0.xml  celegans_v1.xml
params/: params.yaml
scripts/: adam_tune.py  single_commands.txt  slurmscript.py  snips.py  tol_test_slurm.py
stac-mjx/: arenas.py  bind_test.ipynb  compute_stac.py  controller.py  environment.py  graph_error.ipynb  main.py  operations.py  process_snips.py  rodent_environments.py  stac.py  stac_base.py  stac_test.ipynb  stac_test.py  stac_test_config.yaml  state.py  stepthrough.ipynb  tasks.py  test_adam.ipynb  test_root.ipynb  test_root.py  utils.py  viz.py  walkers.py
stac_mjx/: __init__.py  cli.py  compute_stac.py  config.py  controller.py  controller_from_web.py  io.py  io_dict_to_hdf5.py  main.py  op_utils.py  operations.py  replay_fit.py  rescale.py  stac.py  stac_base.py  stac_core.py  stac_core_jaxls.py  utils.py  version.py  viewer.py  viz.py
sungaya_inexpectata_stac/: 1500f_stick_fit_offsets.h5  stick_bug.ipynb
tests/: conftest.py  test_cli.py  test_controller.py  test_io.py  test_main.py  test_model.py  test_replay_fit.py  test_stac_core.py  test_utils.py
tutorials/: mujoco_tutorial.ipynb
videos/: .dummy
(+85 files in other folders)
